swim_common/src/form/tests/derive/unknown_field_attr.stderr
error: Unknown attribute
  --> $DIR/unknown_field_attr.rs:20:16
   |
20 |         #[form(swim)]
   |                ^^^^
